--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,33 @@
-# Spring Boot
-/target/
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-# Maven
-log/
-logs/
-*.log
-/target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Gradle
-.gradle/
-build/
-!gradle/wrapper/gradle-wrapper.jar
-
-# IntelliJ IDEA
-.idea/
-*.iml
+### IntelliJ IDEA ###
+.idea
 *.iws
+*.iml
 *.ipr
 
-# Eclipse
-.classpath
-.project
-.settings/
-
-# NetBeans
+### NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build.xml
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# STS
-.springBeans
-
-# JUnit
-*.class
-
-# Log files
-*.log
-
-# OS generated files
-.DS_Store
-ehthumbs.db
-Thumbs.db
+### VS Code ###
+.vscode/
