--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=guessmusic
 
+socketio.port=8081
+socketio.host=localhost
+
 spring.data.mongodb.uri=mongodb+srv://mango:mango@cluster0.idhjh.mongodb.net/guessmusic?retryWrites=true&w=majority&appName=Cluster0
 
 #spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}/${env.MONGO_DB}?retryWrites=true&w=majority&appName=Cluster0
